--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+ *, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box
+}
+.wrapper {
+  display: flex;
+  padding: 20px;
+}
