--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,6 @@
-<div id="app">
-  <navbar></navbar>
+<div id="app" class="wrapper">
+  <div><sidebar></sidebar></div>
+  <div><navbar></navbar></div>
 </div>
 
 <%= javascript_pack_tag 'main' %>
