--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,10 @@
 <div id="app" class="wrapper">
   <div><sidebar></sidebar></div>
-  <div><navbar></navbar></div>
+  <div class="main-wrapper">
+    <navbar></navbar>
+    <messages></messages>
+    <message-bar></message-bar>
+  </div>
 </div>
 
 <%= javascript_pack_tag 'main' %>
