--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,7 +1,9 @@
 <div id="app" class="wrapper">
   <div><sidebar></sidebar></div>
   <div class="main-wrapper">
+    <navbar></navbar>
     <messages></messages>
+    <message-bar></message-bar>
   </div>
 </div>
 
